--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 log = "0.4.22"
 env_logger = "0.11.5"
 tokio = { version = "1.41.0", features = ["full"] }
+
+[dev-dependencies]
+loom = "0.7.2"
