--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ log = "0.4.22"
 env_logger = "0.11.5"
 tokio = { version = "1.41.0", features = ["full"] }
 regex = "1.11.0"
+toml = "0.8.19"
+serde = { version = "1.0.213", features = ["derive"] }
 
 [dev-dependencies]
 loom = "0.7.2"
